Fix CSS to not show scrollbar after margin added to #cmap-ui.

--- a/src/ui/css/cmap.css
+++ b/src/ui/css/cmap.css
@@ -1,12 +1,16 @@
-html, body, #cmap-ui {
+html, body {
   width: 100%;
-  height: calc(100% - 1rem);
+  height: 100%;
+  margin: 0;
   overflow: hidden;
 }
 
 #cmap-ui {
-  margin: 0.5rem;
+  width: calc(100% - 2rem);
+  height: calc(100% - 2rem);
+  margin: 2rem;
 }
+
 .cmap-vbox {
   display: flex;
   flex-direction: column;
@@ -21,9 +25,8 @@ html, body, #cmap-ui {
 }
 
 .cmap-layout {
-  width: 100%;
-  height: 100%;
-  margin: 0;
+  width: calc(100% - 2rem);
+  height: calc(100% - 2rem);
 }
 
 .cmap-layout-viewport {
@@ -34,8 +37,8 @@ html, body, #cmap-ui {
 
 .cmap-layout-container {
   position: absolute;;
-  width: 100%;
-  height: 100%;
+  width: calc(100% - 2rem);
+  height: calc(100% - 2rem);
 }
 
 .cmap-canvas {
@@ -43,14 +46,15 @@ html, body, #cmap-ui {
 }
 
 .cmap-layout-horizontal {
-  width: 100%;
-  height: 100%;
-  position: relative;;
+  width: calc(100% - 2rem);
+  height: calc(100% - 2rem);
+  position: relative;
 }
 
 .cmap-layout-circos {
-  width: 100%;
-  height: 100%;
+  width: calc(100% - 2rem);
+  height: calc(100% - 2rem);
+  position: relative;
 }
 
 .cmap-correspondence-map {
